--- a/style.css
+++ b/style.css
@@ -5,17 +5,13 @@
 }
 
 body {
-    font-family: sans-serif;
-    background-color: #a3ff97;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffffff;
 }
 
 .encabezado {
     text-align: center;
     padding: 1rem;
-}
-
-h1 {
-    text-shadow: 2px 2px 5px rgb(250, 95, 224);
 }
 
 .preguntas {
@@ -24,10 +20,6 @@ h1 {
     letter-spacing: 1px;
     word-spacing: 4px;
     box-sizing: border-box;
-    border-width: 2px;
-    border-style: dashed;
-    border-color: rgb(252, 25, 176);
-    box-shadow: 10px 5px 10px rgb(250, 95, 224);
 }
 
 /* Mobile devices */
